--- a/src/webparts/spfxBannerSearch/components/SpfxBannerSearch.module.scss
+++ b/src/webparts/spfxBannerSearch/components/SpfxBannerSearch.module.scss
@@ -131,6 +131,7 @@
   font-size: var(--title-font-size, 48px);
   font-weight: 600;
   margin: 0;
+  color: var(--title-color, #ffffff);
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
   line-height: 1.2;
 
